--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
   <h1>Sage's Stuff</h1>
-  <a href="/coomp.html">Comp for college</a>
+  <img src="http://media-cache-ec0.pinimg.com/originals/86/36/a8/8636a850ad806d86dc23b7fac95cc6e7.jpg"/>
 
 </body>
 </html>
