--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
   <title>Sage's Stuff</title>
 </head>
-<body>
+<body background_image="/alien.gif">
 
   <h1>Sage's Stuff</h1>
-  <img src="http://media-cache-ec0.pinimg.com/originals/86/36/a8/8636a850ad806d86dc23b7fac95cc6e7.jpg"/>
+  <img src="/c.gif"/>
+  <img src="/alien.gif"/>
 
 </body>
 </html>
