Background fixed, removed dancing alien image

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
   <title>Sage's Stuff</title>
 </head>
-<body background_image="/alien.gif">
-
-  <h1>Sage's Stuff</h1>
-  <img src="/c.gif"/>
-  <img src="/alien.gif"/>
-
+<body background="/alien.gif">
+  <center>
+    <h1>Sage's Stuff</h1>
+    <img src="/c.gif"/>
+    <img src="/alien.gif"/>
+  </center>
 </body>
 </html>
