--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <center>
     <h1>Sage's Stuff</h1>
     <img src="/c.gif"/>
+	<a href="/coomp/index.html">Comp notes</a>
   </center>
 </body>
 </html>
