Converted site to use css, and made it more proper

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
-<head>
-  <title>Sage's Stuff</title>
-</head>
-<body background="/alien.gif">
-  <center>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Sage's Stuff</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
     <h1>Sage's Stuff</h1>
-    <img src="/c.gif"/>
-  </center>
-</body>
+    <img src="c.gif" />
+  </body>
 </html>
