Did some styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Sage's Stuff</h1>
-    <img src="c.gif" />
+    <header>
+      <h1>Sage's Stuff</h1>
+    </header>
+    <section id="content">
+      <img src="c.gif" />
+    </section>
   </body>
 </html>
