Made css more semantic, responsive, and correct.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>Sage's Stuff</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
       <h1>Sage's Stuff</h1>
     </header>
-    <section id="content">
-      <img src="c.gif" />
-    </section>
+    <main>
+      <img id="yeti" src="c.gif" />
+    </main>
   </body>
 </html>
