Removed images, added placeholder text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <h1>Sage's Stuff</h1>
     </header>
     <main>
-      <img id="yeti" src="c.gif" />
+      This is a placeholder site.
+      <!--<img id="yeti" src="c.gif" />-->
     </main>
   </body>
 </html>
