Added info for abrasiveguys.com

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
       <h1>Sage's Stuff</h1>
     </header>
     <main>
-      This is a placeholder site.
-      <!--<img id="yeti" src="c.gif" />-->
+      <section>
+        <h2>Abrasiveguys.com</h2>
+        <section><a href="https://web.archive.org/web/20100309014139/http://www.abrasiveguys.com/"><h3>Before redesign</h3></a></section>
+        <section><a href="http://abrasiveguys.com"><h3>Current redesign</h3></a></section>
+        <section>
+          <h3>Future WIP design:</h3><br>
+          <img id="new-design" src="new_design.png"/>
+        </section>
+      </section>
     </main>
   </body>
 </html>
