Removed old content, added resume link

--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
       <h1>Sage's Stuff</h1>
     </header>
     <main>
-      <section>
-        <h2>Abrasiveguys.com</h2>
-        <section><a href="https://web.archive.org/web/20100309014139/http://www.abrasiveguys.com/"><h3>Before redesign</h3></a></section>
-        <section><a href="http://abrasiveguys.com"><h3>Current redesign</h3></a></section>
-        <section>
-          <h3>Future WIP design:</h3><br>
-          <img id="new-design" src="new_design.png"/>
-        </section>
-      </section>
+        <h2> Resume </h2>
+        <a href="resume/"><h3>(web)</h3></a>
+        <a href="resume/resume.pdf"><h3>(pdf)</h3></a>
     </main>
   </body>
 </html>
