Made site now redirect to neonfuz.xyz

--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Sage's Stuff</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <header>
-      <h1>Sage's Stuff</h1>
-    </header>
-    <main>
-        <h2> Resume </h2>
-        <a href="resume/"><h3>(web)</h3></a>
-        <a href="resume/resume.pdf"><h3>(pdf)</h3></a>
-    </main>
-  </body>
-</html>
+<meta http-equiv="Refresh" content="0; url=https://neonfuz.xyz" />
